# documentation-template

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: index.html  index.md  sidebar.md
docs/system-design/: deployment.md  development.md  goals.md  main.md  modules.md  repo.md  requirements.md  use-cases.md
tools/: build-docx.py  build-pdf.py  reference.docx
