[project]
name = "documentation-template"
version = "0.1.0"
description = "Documentation template with DOCX/PDF generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "pyyaml>=6.0.2",
    "mermaidx>=0.9.3",
    "pypandoc-binary>=1.17",
]

[dependency-groups]
dev = [
    "pycodestyle>=2.12.0",
    "pylint>=3.3.0",
]
